# Clawie

./: README.md  clawie
python-clawie/: CLAWIE.md
python-clawie/.port_sessions/: workspace_memory.json
python-clawie/rust/: CONTRIBUTING.md
python-clawie/src/: QueryEngine.py  Tool.py  __init__.py  commands.py  dialogLaunchers.py  ink.py  main.py  memory_store.py  query_engine.py  runtime.py  session_store.py  shrimpi.py  tasks.py  tool_pool.py  tools.py  transcript.py
python-clawie/tests/: test_porting_workspace.py
rust-clawie/.port_sessions/: workspace_memory.json
rust-clawie/rust/.claw/sessions/: session-1775403750827-0.jsonl  session-1775404534115-0.jsonl  session-1775404584082-0.jsonl  session-1775404669368-0.jsonl  session-1775405145697-0.jsonl  session-1775405315610-0.jsonl  session-1775405576466-0.jsonl  session-1775405848354-0.jsonl  session-1775405975436-0.jsonl  session-1775406104622-0.jsonl  session-1775406342113-0.jsonl  session-1775406694664-0.jsonl  session-1775406821862-0.jsonl  session-1775406897323-0.jsonl  session-1775407029798-0.jsonl  session-1775407168630-0.jsonl  session-1775407223468-0.jsonl  (+56 more)
rust-clawie/rust/crates/mock-anthropic-service/: Cargo.toml
rust-clawie/rust/crates/mock-anthropic-service/src/: main.rs
rust-clawie/src/: Tool.py  __init__.py  commands.py  context.py  main.py  query_engine.py  runtime.py  session_store.py  setup.py  shrimpi.py  tools.py
rust-clawie/src/reference_data/: archive_surface_snapshot.json  commands_snapshot.json  tools_snapshot.json
rust-clawie/tests/: test_porting_workspace.py
(+33 files in other folders)
